# pdp

./: .gitignore  CMakeLists.txt  MODULE.bazel  WORKSPACE.bazel  move_semantics.cpp  threads.cpp
.github/workflows/: bazel-ci.yml
shared-memory/: BUILD.bazel  mem_consistent.cpp  mem_consistent_no_fences.cpp  naive_queue.h  threads.cpp  threadsafe_queue.h
shared-memory/main/: mem_consistent.cpp  mem_consistent_no_fences.cpp  thread_guard.cpp
shared-memory/tests/: test_naive_queue.cpp  test_threadsafe_queue.cpp
